@@ -105,8 +105,6 @@ it.uniroma2.art.semanticturkey.extension.impl.deployer.showvoc.ShowVocDeployerCo
 it.uniroma2.art.semanticturkey.extension.impl.deployer.showvoc.ShowVocDeployerConfiguration.htmlWarning = The credentials are stored without encryption on the server. Be aware that the system administration could be able to see them
 it.uniroma2.art.semanticturkey.extension.impl.deployer.showvoc.ShowVocDeployerConfiguration.stHost.description =
 it.uniroma2.art.semanticturkey.extension.impl.deployer.showvoc.ShowVocDeployerConfiguration.stHost.displayName = Semantic Turkey host
-it.uniroma2.art.semanticturkey.extension.impl.deployer.showvoc.ShowVocDeployerConfiguration.stPath.description =
-it.uniroma2.art.semanticturkey.extension.impl.deployer.showvoc.ShowVocDeployerConfiguration.stPath.displayName = Semantic Turkey path
 it.uniroma2.art.semanticturkey.extension.impl.deployer.showvoc.ShowVocDeployerConfiguration.username.description =
 it.uniroma2.art.semanticturkey.extension.impl.deployer.showvoc.ShowVocDeployerConfiguration.username.displayName = Username
 it.uniroma2.art.semanticturkey.extension.impl.deployer.showvoc.ShowVocDeployerConfiguration.password.description =
